DAL Layer creation, Working on seperation of concerns in detail.cshtml.cs
Attempting to move all the database connectivity to persondataconnector class (right now I have database connectivity in my Details.cshtml.cs file).

Later I will move the entire PersonDataConnector class to the DAL I just created (Right now its empty)

--- a/S2IndividualProjectDnDPrototype/Pages/Index.cshtml
+++ b/S2IndividualProjectDnDPrototype/Pages/Index.cshtml
@@ -39,7 +39,7 @@
                 <h4 class="card-title"> @pers.Name    </h4>
                 <p class="card-text"> @pers.Name is @pers.Age years old and is a @pers.Gender.</p>
                 <p class="text-opacity-75 card-text"> @pers.Name lives at @pers.Address </p>
-                <a asp-page="./PersonPages/Details" asp-route-name="@pers.Name" class="card-link btn btn-primary"> Link to PersonPage</a>
+                <a asp-page="./PersonPages/Details" asp-route-userID="@pers.Id" class="card-link btn btn-primary"> Link to PersonPage</a>
                 <a href="https://google.com" class="card-link btn btn-primary"> Link to google as well </a>
         
            </div>
