Added CharacterSheet Page
Added character sheet functionality in the DB and made it accessible via the index page. Added CharacterDataConnector in the helper folder
added CharacterPage

--- a/S2IndividualProjectDnDPrototype/Pages/Index.cshtml
+++ b/S2IndividualProjectDnDPrototype/Pages/Index.cshtml
@@ -40,7 +40,7 @@
                 <p class="card-text"> @pers.Name is @pers.Age years old and is a @pers.Gender.</p>
                 <p class="text-opacity-75 card-text"> @pers.Name lives at @pers.Address </p>
                 <a asp-page="./PersonPages/Details" asp-route-userID="@pers.Id" class="card-link btn btn-primary"> Link to PersonPage</a>
-                <a href="https://google.com" class="card-link btn btn-primary"> Link to google as well </a>
+                <a asp-page="/Characterpage" asp-route-CharacterId="5" class="card-link btn btn-primary"> Link to Character Sheet </a>
         
            </div>
      </div>
