--- a/S2IndividualProjectDnDPrototype/Pages/PersonPage.cshtml
+++ b/S2IndividualProjectDnDPrototype/Pages/PersonPage.cshtml
@@ -13,7 +13,7 @@
     <td>Age</td>
     <td>Gender</td>
     </thead>
-    @foreach (Models.Person pers in Model.People)
+    @foreach (Models.PersonViewModel pers in Model.People)
     {
         <tr>
             <td>@pers.Name</td>
