--- a/S2IndividualProjectDnDPrototype/Pages/PersonPages/Details.cshtml
+++ b/S2IndividualProjectDnDPrototype/Pages/PersonPages/Details.cshtml
@@ -4,7 +4,7 @@
 <h1>hallo </h1>
 @{
 
-    Models.Person person = Model.getSinglePerson();
+    Models.PersonViewModel person = Model.getSinglePerson();
     <div class="card text-light text-center container-fluid" style="width:400px; margin:0.5em; background-color:var(--bg); ">
         <div>
 
