--- a/S2IndividualProjectDnDPrototype/Pages/DMorPlayerPage.cshtml
+++ b/S2IndividualProjectDnDPrototype/Pages/DMorPlayerPage.cshtml
@@ -10,18 +10,8 @@
     <label>Dungeon Master</label> <br>
     <input type=radio name="IsDungeonMaster"> 
     <label>Player</label>   <br>
-    <input type="submit" value="submit"
+    <input type="submit" value="submit" />
 </form>
 
 <br />
 
-<p>This is to test how radio buttons work</p>
-
-<form>
-    <input type="radio" id="html" name="fav_language" value="HTML">
-    <label for="html">ONE </label><br>
-    <input type="radio" id="css" name="fav_language" value="CSS">
-    <label for="css">TWO</label><br>
-    <input type="radio" id="javascript" name="fav_language" value="JavaScript">
-    <label for="javascript">Three</label>
-</form>
