Session Functionality and add Character page

--- a/S2IndividualProjectDnDPrototype/Pages/CharacterPage.cshtml
+++ b/S2IndividualProjectDnDPrototype/Pages/CharacterPage.cshtml
@@ -22,7 +22,7 @@
 
 
             <a asp-page="/Index" asp-route-hasreturnedtopage="yeah" class="card-link btn btn-primary"> Back To index</a>
-            <a href="https://google.com" class="card-link btn btn-primary"> Link to google as well </a>
+            <a href="/CreateCharacter" class="card-link btn btn-primary"> Create a new character </a>
             
 
 
