Added delete character and CampaignEntity

--- a/S2IndividualProjectDnDPrototype/Pages/CharacterPage.cshtml
+++ b/S2IndividualProjectDnDPrototype/Pages/CharacterPage.cshtml
@@ -23,6 +23,7 @@
 
             <a asp-page="/Index" asp-route-hasreturnedtopage="yeah" class="card-link btn btn-primary"> Back To index</a>
             <a href="/CreateCharacter" class="card-link btn btn-primary"> Create a new character </a>
+            <a asp-page="/DeleteCharacterPage" asp-route-character="@character.Id">&#x1F5D1; </a>
             
 
 
