Added campaign add/remove/details

--- a/S2IndividualProjectDnDPrototype/Pages/Shared/_Layout.cshtml
+++ b/S2IndividualProjectDnDPrototype/Pages/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                             <a class="nav-link text-light" asp-area="" asp-page="/LoginPage">Log in</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/PersonPage">View Person Data here</a>
+                            <a class="nav-link text-light" asp-area="" asp-page="/CampaignPages/CampaignList">Campaigns</a>
                         </li>
                     </ul>
                 </div>
