--- a/S2IndividualProjectDnDPrototype/Pages/CampaignPages/CampaignDetails.cshtml
+++ b/S2IndividualProjectDnDPrototype/Pages/CampaignPages/CampaignDetails.cshtml
@@ -16,3 +16,21 @@
 
     </div>
 </div>
+
+<div class="container center border-light " style="border-color: white; border-width: 2px;">
+    @foreach (LogicLayer.Entities.Character CampChars in Model.CampaignCharacters)
+    {
+        <div class="card text-light text-center container-fluid" style="width:400px; margin:0.5em; background-color:var(--bg); ">
+            <div>
+
+
+                <h4 class="card-title"> @CampChars.Name    </h4>
+                <p class="card-text"> @CampChars.Name has @CampChars.maxHealth health </p>
+                <p class="text-opacity-75 card-text">@CampChars.Name has CharID @CampChars.Id </p>
+                <a asp-page="./CharacterPages/CharacterDetails" asp-route-userID="@CampChars.Id" class="card-link btn btn-primary"> Char Details</a>
+                <a asp-page="/Characterpage" asp-route-CharacterId="@CampChars.Id" class="card-link btn btn-primary"> Link to Character Sheet </a>
+
+            </div>
+        </div>
+    }
+</div>
