Fixed delete campaign
When you delete a campaign all chars under that campaign will get their CampaignID set to NULL so that its allowed to be deleted

--- a/S2IndividualProjectDnDPrototype/Pages/CreateCharacter.cshtml
+++ b/S2IndividualProjectDnDPrototype/Pages/CreateCharacter.cshtml
@@ -7,6 +7,7 @@
 <form method ="post">
     <input asp-for="Character.Name" placeholder="Character Name" />
     <br/>
+    <input asp-for="Character.CampaignId" placeholder="What CampaignID" />
     <input asp-for="Character.maxHealth" placeholder="Max HP" />
     <input asp-for="Character.maxStrength" placeholder="Max Strength" />
     <input asp-for="Character.maxDexterity" placeholder="Max Dexterity" />
