Moved charPages, Added logout button, sessiontimer 10min instead of 1

--- a/S2IndividualProjectDnDPrototype/Pages/CharacterPages/CharacterPage.cshtml
+++ b/S2IndividualProjectDnDPrototype/Pages/CharacterPages/CharacterPage.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model S2IndividualProjectDnDPrototype.Pages.CharacterPageModel
+@model S2IndividualProjectDnDPrototype.Pages.CharacterPages.CharacterPageModel
 @{
 
     LogicLayer.Entities.Character character = Model.getSingleCharacter();
@@ -22,8 +22,8 @@
 
 
             <a asp-page="/Index" asp-route-hasreturnedtopage="yeah" class="card-link btn btn-primary"> Back To index</a>
-            <a href="/CreateCharacter" class="card-link btn btn-primary"> Create a new character </a>
-            <a asp-page="/DeleteCharacterPage" asp-route-character="@character.Id">&#x1F5D1; </a>
+            <a href="/CharacterPages/CreateCharacter" class="card-link btn btn-primary"> Create a new character </a>
+            <a asp-page="/CharacterPages/DeleteCharacterPage" asp-route-character="@character.Id">&#x1F5D1; </a>
             
 
 
