--- a/S2IndividualProjectDnDPrototype/Pages/CharacterPages/CreateCharacter.cshtml
+++ b/S2IndividualProjectDnDPrototype/Pages/CharacterPages/CreateCharacter.cshtml
@@ -1,8 +1,8 @@
 ﻿@page
-@model S2IndividualProjectDnDPrototype.Pages.CreateCharacterModel
+@model S2IndividualProjectDnDPrototype.Pages.CharacterPages.CreateCharacterModel
 @{
 }
-
+<h1 class="center">Create your character!</h1>
 
 <form method ="post">
     <input asp-for="Character.Name" placeholder="Character Name" />
