--- a/S2IndividualProjectDnDPrototype/Pages/CharacterPages/DeleteCharacterPage.cshtml
+++ b/S2IndividualProjectDnDPrototype/Pages/CharacterPages/DeleteCharacterPage.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model S2IndividualProjectDnDPrototype.Pages.DeleteCharacterPageModel
+@model S2IndividualProjectDnDPrototype.Pages.CharacterPages.DeleteCharacterPageModel
 @{
 
 LogicLayer.Entities.Character character = Model.getSingleCharacter();
