--- a/S2IndividualProjectDnDPrototype/Pages/CharacterPages/CharacterPage.cshtml
+++ b/S2IndividualProjectDnDPrototype/Pages/CharacterPages/CharacterPage.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "{characterID}"
 @model S2IndividualProjectDnDPrototype.Pages.CharacterPages.CharacterPageModel
 @{
 
@@ -21,9 +21,10 @@
             
 
 
-            <a asp-page="/Index" asp-route-hasreturnedtopage="yeah" class="card-link btn btn-primary"> Back To index</a>
+            <a asp-page="/Index" asp-route-hasreturnedtopage="yeah" class="card-link btn btn-primary"> Back To Index</a>
             <a href="/CharacterPages/CreateCharacter" class="card-link btn btn-primary"> Create a new character </a>
-            <a asp-page="/CharacterPages/DeleteCharacterPage" asp-route-character="@character.Id">&#x1F5D1; </a>
+            <a href="/CharacterPages/EditCharacter/@character.Id" class="card-link btn btn-warning"> Edit Character</a>
+            <a asp-page="/CharacterPages/DeleteCharacterPage" asp-route-characterID="@character.Id" class="card-link btn btn-danger"> Delete</a>
             
 
 
