Lots of styling changes

--- a/S2IndividualProjectDnDPrototype/Pages/CampaignPages/CreateCampaignPage.cshtml
+++ b/S2IndividualProjectDnDPrototype/Pages/CampaignPages/CreateCampaignPage.cshtml
@@ -10,6 +10,6 @@
     <input asp-for="Campaign.Description" placeholder="Description" />
 
 
-    <input button type="submit" value="Create Character" />
+    <input button type="submit" value="Create Campaign" />
 
 </form>
