--- a/S2IndividualProjectDnDPrototype/Pages/CharacterPages/CharacterPage.cshtml
+++ b/S2IndividualProjectDnDPrototype/Pages/CharacterPages/CharacterPage.cshtml
@@ -23,7 +23,7 @@
 
             <a asp-page="/Index" asp-route-hasreturnedtopage="yeah" class="card-link btn btn-primary"> Back To Index</a>
             <a href="/CharacterPages/CreateCharacter" class="card-link btn btn-primary"> Create a new character </a>
-            <a href="/CharacterPages/EditCharacter/@character.Id" class="card-link btn btn-warning"> Edit Character</a>
+            <a href="/CharacterPages/EditCharacter/@character.Id" class="card-link btn btn-primary"> Edit Character</a>
             <a asp-page="/CharacterPages/DeleteCharacterPage" asp-route-characterID="@character.Id" class="card-link btn btn-danger"> Delete</a>
             
 
