--- a/S2IndividualProjectDnDPrototype/Pages/DMorPlayerPage.cshtml
+++ b/S2IndividualProjectDnDPrototype/Pages/DMorPlayerPage.cshtml
@@ -14,7 +14,7 @@
         <input type="radio" asp-for="User.IsDungeonMaster" value="false" id="player" />
         <label for="player">Player</label>
     </div>
-    <button type="submit">Submit</button>
+    <input type="Submit"></input>
 </form>
 
 <br />
