--- a/S2IndividualProjectDnDPrototype/wwwroot/css/site.css
+++ b/S2IndividualProjectDnDPrototype/wwwroot/css/site.css
@@ -105,3 +105,40 @@ tr:hover {
     transition: var(--transition);
     border-color: var(--border);
 }
+
+form {
+    display: grid;
+    gap: 1rem;
+
+
+}
+
+.form-group {
+    display: grid;
+
+}
+
+label { 
+    text-transform: uppercase;
+    font-size: 1rem;
+
+}
+
+text,
+textarea,
+input {
+    background: var(--bg-light);
+    color: var(--text);
+    border: var(--border);
+    border-radius: 16px;
+    padding: 1ex 2ex;
+    accent-color: var(--secondary)
+}
+
+
+.input:focus,
+.textarea:focus,
+.text:focus {
+    background: var(--bg-dark);
+    color: var(--text)
+}
