--- a/S2IndividualProjectDnDPrototype/Pages/CharacterPages/EditCharacter.cshtml
+++ b/S2IndividualProjectDnDPrototype/Pages/CharacterPages/EditCharacter.cshtml
@@ -96,8 +96,7 @@
     </div>
 
     <div class="mt-3">
-        <input type="submit" class="btn btn-primary"></input>
+        <input type="submit" class="btn btn-primary">
         <a href="/CharacterPages/CharacterPage/@Model.Character.Id" class="btn btn-secondary">Cancel</a>
-        <a href="/CharacterPages/EditCharacter/@Model.Character.Id" class="btn btn-secondary">Edit Character</a>
     </div>
 </form> 
