Input Validation checks in Charedit page. Charedit page works. Added UserLogin with DB. + Misc fixes

--- a/S2IndividualProjectDnDPrototype/Pages/CampaignPages/CampaignDetails.cshtml
+++ b/S2IndividualProjectDnDPrototype/Pages/CampaignPages/CampaignDetails.cshtml
@@ -17,7 +17,7 @@
     </div>
 </div>
 
-<div class="container center border-light " style="border-color: white; border-width: 2px;">
+<div >
     @foreach (LogicLayer.Entities.Character CampChars in Model.CampaignCharacters)
     {
         <div class="card text-light text-center container-fluid" style="width:400px; margin:0.5em; background-color:var(--bg); ">
