--- a/S2IndividualProjectDnDPrototype/Pages/CampaignPages/EditCampaignPage.cshtml
+++ b/S2IndividualProjectDnDPrototype/Pages/CampaignPages/EditCampaignPage.cshtml
@@ -2,4 +2,31 @@
 @model S2IndividualProjectDnDPrototype.Pages.CampaignPages.EditCampaignPageModel
 @{
 }
-<p>edit page</p>
+<p>edit page for @Model.Campaign.Name </p>
+
+
+<form method="post">
+    <input type="hidden" asp-for="Campaign.Id" />
+
+
+    <div class="row">
+        <div class="col-md-6">
+            <h4>Current Campaign details</h4>
+            <div class="mb-3 form-group">
+                <label asp-for="Campaign.Name">Campaign Name </label>
+                <input type="text" asp-for="Campaign.Name" />
+            </div>
+            <div class="mb-3 form-group">
+                <label asp-for="Campaign.Owner"> Current Owner</label>
+                <input type="text" asp-for="Campaign.Owner" />
+            </div>
+            <div class="mb-3 form-group">
+                <label asp-for="Campaign.Description">Current Description</label>
+                <input type="text" asp-for="Campaign.Description" />
+            </div>
+            
+    <div class="mt-3">
+        <input type="submit" class="btn btn-primary">
+        <a href="Pages/CampaignPages/CampaignDetails/@Model.Campaign.Id" class="btn btn-secondary">Cancel</a>
+    </div>
+</form> 
