--- a/S2IndividualProjectDnDPrototype/Pages/LoginPage.cshtml
+++ b/S2IndividualProjectDnDPrototype/Pages/LoginPage.cshtml
@@ -8,7 +8,7 @@
 
 <form method="post">
 <p>Username</p>    <input asp-for= "User.Name" ></>
-<p>Password</p>    <input asp-for="User.Password"></>
+<p>Password</p>    <input type="password" asp-for="User.Password"></>
     <input type="submit" value="Log in" />
 </form>
 
